gk - update to use new site

--- a/gk/about-us.html
+++ b/gk/about-us.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=169349590" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=264391001" id="pagesheet"/>
     <!--/*
 
 */
@@ -31,29 +31,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu1280"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U1280-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive" id="u1280" href="about-us.html" data-href="page:U1310" data-muse-uid="U1280"><!-- content --></a>
+   <div class="clearfix grpelem" id="pu3103"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U3103-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize" id="u3103" href="index.html" data-href="page:U93" data-muse-uid="U3103"><!-- content --></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1275-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext museBGSize" id="u1275" href="index.html" data-href="page:U93" data-muse-uid="U1275"><!-- content --></a>
+    <div class="museBGSize" id="u3104"><!-- content --></div>
+    <div class="museBGSize" id="u3105"><!-- content --></div>
+    <div class="museBGSize" id="u3106"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U3107-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3107-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3107" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
     <!-- /m_editable -->
-    <div class="museBGSize" id="u1278"><!-- content --></div>
-    <div class="museBGSize" id="u1285"><!-- content --></div>
-    <div class="museBGSize" id="u1282"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U1281-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1281-4" href="index.html" data-href="page:U93" data-muse-uid="U1281" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3108-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3108-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3108" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1276-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1276-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U1276" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3109-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext MuseLinkActive clearfix" id="u3109-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3109" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1284-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive clearfix" id="u1284-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U1284" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3110-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3110-4" href="games.html" data-href="page:U2961" data-muse-uid="U3110" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1277-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1277-4" href="games.html" data-href="page:U1608" data-muse-uid="U1277" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-    <!-- /m_editable -->
-    <div class="ose_pre_init" id="u1283"><!-- content --></div>
+    <div class="ose_pre_init" id="u3111"><!-- content --></div>
    </div>
    <div class="clearfix grpelem" id="pu1311-7"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U1311-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -64,16 +61,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1442"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U1288-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u1288-4" data-muse-uid="U1288" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix colelem" id="u3403"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3405-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3405-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3405" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3406-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3406-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3406" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3404-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3404-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3404" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3407-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3407-4" href="games.html" data-href="page:U2961" data-muse-uid="U3407" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3409-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3409-4" data-muse-uid="U3409" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1286-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame colelem" id="u1286" href="http://www.tacklebox.company" data-muse-uid="U1286"><!-- svg --><img class="svg" id="u1287" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
+    <!-- m_editable region-id="editable-static-tag-U3410-BP_infinity" template="about-us.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame colelem" id="u3410" href="http://www.tacklebox.company" data-muse-uid="U3410"><!-- svg --><img class="svg" id="u3411" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="1067" data-content-above-spacer="1067" data-content-below-spacer="49"></div>
+   <div class="verticalspacer" data-offset-top="1136" data-content-above-spacer="1136" data-content-below-spacer="50"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -92,7 +103,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1283').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u3111').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
