--- a/gk/gallery.html
+++ b/gk/gallery.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=4271170824" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=455055910" id="pagesheet"/>
     <!--/*
 
 */
@@ -31,26 +31,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu967"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U967-BP_infinity" template="gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext museBGSize" id="u967" href="index.html" data-href="page:U93" data-muse-uid="U967"><!-- content --></a>
+   <div class="clearfix grpelem" id="pu3076"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U3076-BP_infinity" template="gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize" id="u3076" href="index.html" data-href="page:U93" data-muse-uid="U3076"><!-- content --></a>
     <!-- /m_editable -->
-    <div class="museBGSize" id="u971"><!-- content --></div>
-    <div class="museBGSize" id="u972"><!-- content --></div>
-    <div class="museBGSize" id="u968"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U1067-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1067-4" href="index.html" data-href="page:U93" data-muse-uid="U1067" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+    <div class="museBGSize" id="u3077"><!-- content --></div>
+    <div class="museBGSize" id="u3078"><!-- content --></div>
+    <div class="museBGSize" id="u3079"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U3080-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3080-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3080" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1068-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive clearfix" id="u1068-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U1068" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3081-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext MuseLinkActive clearfix" id="u3081-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3081" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1069-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1069-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U1069" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3082-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3082-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3082" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1070-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u1070-4" href="games.html" data-href="page:U1608" data-muse-uid="U1070" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+    <!-- m_editable region-id="editable-static-tag-U3083-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u3083-4" href="games.html" data-href="page:U2961" data-muse-uid="U3083" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
-    <div class="ose_pre_init" id="u1204"><!-- content --></div>
+    <div class="ose_pre_init" id="u3084"><!-- content --></div>
    </div>
    <div class="clearfix grpelem" id="pu1001"><!-- column -->
     <div class="colelem" id="u1001"><!-- content --></div>
@@ -60,16 +60,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="colelem" id="u1006"><!-- content --></div>
     <div class="colelem" id="u1007"><!-- content --></div>
     <div class="colelem" id="u1002"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U970-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u970-4" data-muse-uid="U970" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix colelem" id="u3433"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3435-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3435-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3435" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3436-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3436-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3436" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3434-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3434-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3434" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3437-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3437-4" href="games.html" data-href="page:U2961" data-muse-uid="U3437" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3439-BP_infinity" template="gallery.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3439-4" data-muse-uid="U3439" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U975-BP_infinity" template="gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame colelem" id="u975" href="http://www.tacklebox.company" data-muse-uid="U975"><!-- svg --><img class="svg" id="u976" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
+    <!-- m_editable region-id="editable-static-tag-U3440-BP_infinity" template="gallery.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame colelem" id="u3440" href="http://www.tacklebox.company" data-muse-uid="U3440"><!-- svg --><img class="svg" id="u3441" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="5871" data-content-above-spacer="5870" data-content-below-spacer="49"></div>
+   <div class="verticalspacer" data-offset-top="5940" data-content-above-spacer="5939" data-content-below-spacer="50"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -88,7 +102,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1204').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u3084').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
