--- a/gk/index.html
+++ b/gk/index.html
@@ -22,40 +22,208 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=516789985" id="pagesheet"/>
-    <!--/*
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4092552753" id="pagesheet"/>
+    <!--HTML Widget code-->
+  
+<style>
+
+/* Created by Joseph Angelo Todaro of MuseResources.com. Reuse of this code is traceable and strictly prohibited. */
+
+.u2251float{
+    animation: u2251floatVerticalFrames ease-in-out 1s;
+  animation-iteration-count: infinite;
+  transform-origin: 50% 50%;
+    -webkit-animation: u2251floatVerticalFrames ease-in-out 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-transform-origin: 50% 50%;
+    -moz-animation: u2251floatVerticalFrames ease-in-out 1s;
+  -moz-animation-iteration-count: infinite;
+  -moz-transform-origin: 50% 50%;
+    -o-animation: u2251floatVerticalFrames ease-in-out 1s;
+  -o-animation-iteration-count: infinite;
+  -o-transform-origin: 50% 50%;
+    -ms-animation: u2251floatVerticalFrames ease-in-out 1s;
+  -ms-animation-iteration-count: infinite;
+  -ms-transform-origin: 50% 50%;
+}
+
+@keyframes u2251floatVerticalFrames{
+  0% {
+    transform:  translate(0px,0px)  ;
+  }
+  50% {
+    transform:  translate(0px,-3px)  ;
+  }
+  100% {
+    transform:  translate(0px,0px)  ;
+  }
+}
+
+@-moz-keyframes u2251floatVerticalFrames{
+  0% {
+    -moz-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -moz-transform:  translate(0px,-3px)  ;
+  }
+  100% {
+    -moz-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-webkit-keyframes u2251floatVerticalFrames {
+  0% {
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -webkit-transform:  translate(0px,-3px)  ;
+  }
+  100% {
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-o-keyframes u2251floatVerticalFrames {
+  0% {
+    -o-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -o-transform:  translate(0px,-3px)  ;
+  }
+  100% {
+    -o-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-ms-keyframes u2251floatVerticalFrames {
+  0% {
+    -ms-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -ms-transform:  translate(0px,-3px)  ;
+  }
+  100% {
+    -ms-transform:  translate(0px,0px)  ;
+  }
+}
+
+
+
+
+@keyframes u2251floatHorizontalFrames{
+  0% {
+    transform:  translate(0px,0px)  ;
+  }
+  50% {
+    transform:  translate(-3px,0px)  ;
+  }
+  100% {
+    transform:  translate(0px,0px)  ;
+  }
+}
+
+@-moz-keyframes u2251floatHorizontalFrames{
+  0% {
+    -moz-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -moz-transform:  translate(-3px, 0px)  ;
+  }
+  100% {
+    -moz-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-webkit-keyframes u2251floatHorizontalFrames {
+  0% {
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -webkit-transform:  translate(-3px,0px)  ;
+  }
+  100% {
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-o-keyframes u2251floatHorizontalFrames {
+  0% {
+    -o-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -o-transform:  translate(-3px,0px)  ;
+  }
+  100% {
+    -o-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-ms-keyframes u2251floatHorizontalFrames {
+  0% {
+    -ms-transform:  translate(0px,0px)  ;
+  }
+  50% {
+    -ms-transform:  translate(-3px,0px)  ;
+  }
+  100% {
+    -ms-transform:  translate(0px,0px)  ;
+  }
+}
+
+/* Created by Joseph Angelo Todaro of MuseResources.com. Reuse of this code is traceable and strictly prohibited. */
+
+</style>
+
+  <!--/*
 
 */
 -->
  </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu951"><!-- group -->
-    <div id="u951"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U105-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive museBGSize" id="u105" href="index.html" data-href="page:U93" data-muse-uid="U105"><!-- content --></a>
+  <div class="museBGSize CLOUD11 clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu2497"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U2497-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext MuseLinkActive museBGSize" id="u2497" href="index.html" data-href="page:U93" data-muse-uid="U2497"><!-- content --></a>
     <!-- /m_editable -->
-    <div class="museBGSize" id="u109"><!-- content --></div>
-    <div class="museBGSize" id="u291"><!-- content --></div>
-    <div class="museBGSize" id="u110"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U99-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive clearfix" id="u99-4" href="index.html" data-href="page:U93" data-muse-uid="U99" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+    <div class="museBGSize" id="u2498"><!-- content --></div>
+    <div class="museBGSize" id="u2499"><!-- content --></div>
+    <div class="museBGSize" id="u2500"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U2501-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext anim_swing clearfix" id="u2501-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U2501" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U100-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u100-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U100" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+    <!-- m_editable region-id="editable-static-tag-U2502-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u2502-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U2502" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U101-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u101-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U101" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+    <!-- m_editable region-id="editable-static-tag-U2503-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u2503-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U2503" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U314-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix" id="u314-4" href="games.html" data-href="page:U1608" data-muse-uid="U314" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+    <!-- m_editable region-id="editable-static-tag-U2504-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u2504-4" href="games.html" data-href="page:U2961" data-muse-uid="U2504" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
-    <div class="ose_pre_init" id="u1199"><!-- content --></div>
+    <div class="ose_pre_init" id="u2581"><!-- content --></div>
+    <div class="ose_pre_init mse_pre_init" id="u2158"><!-- simple frame --></div>
+    <div class="museBGSize CLOUD6 mse_pre_init" id="u2159"><!-- content --></div>
+    <div class="museBGSize ose_pre_init mse_pre_init" id="u2160"><!-- content --></div>
+    <div class="CLOUD11 museBGSize mse_pre_init" id="u2162"><!-- content --></div>
+    <div class="museBGSize CLOUD10 mse_pre_init" id="u2163"><!-- content --></div>
+    <div class="museBGSize CLOUD5 mse_pre_init" id="u2164"><!-- content --></div>
+    <div class="CLOUD2 mse_pre_init" id="u2165"><!-- content --></div>
+    <div class="museBGSize CLOUD8 mse_pre_init" id="u2168"><!-- content --></div>
+    <div class="CLOUD1 mse_pre_init" id="u2169"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U2170-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext anim_swing museBGSize Banner mse_pre_init" id="u2170" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U2170"><!-- content --></a>
+    <!-- /m_editable -->
+    <div class="museBGSize CLOUD3 mse_pre_init" id="u2171"><!-- content --></div>
+    <div class="museBGSize CLOUD4 mse_pre_init" id="u2172"><!-- content --></div>
+    <div class="museBGSize CLOUD7 mse_pre_init" id="u2173"><!-- content --></div>
+    <div class="museBGSize CLOUD9 mse_pre_init" id="u2174"><!-- content --></div>
    </div>
-   <div class="clearfix grpelem" id="pu270"><!-- group -->
-    <div class="grpelem" id="u270"><!-- custom html -->
-     <div id='collection-component-1594095473767'></div>
+   <div class="clearfix grpelem" id="pgk"><!-- column -->
+    <a class="anchor_item colelem" id="gk"></a>
+    <div class="clearfix colelem" id="pu270"><!-- group -->
+     <div class="grpelem" id="u270"><!-- custom html -->
+      <div id='collection-component-1594095473767'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -310,18 +478,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 })();
 /*]]>*/
 </script>
+     </div>
+     <div class="clearfix grpelem" id="u3463"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U3465-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3465-4" href="index.html#gk" data-href="anchor:U82:U2575" data-muse-uid="U3465" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3466-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3466-4" href="gallery.html" data-href="page:U1000" data-muse-uid="U3466" data-muse-type="txt_frame"><!-- content --><p>Gallery</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3464-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3464-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U3464" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3467-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3467-4" href="games.html" data-href="page:U2961" data-muse-uid="U3467" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+      <!-- /m_editable -->
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U3469-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u3469-4" data-muse-uid="U3469" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>© Gods Kid Inc 2020</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3470-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u3470" href="http://www.tacklebox.company" data-muse-uid="U3470"><!-- svg --><img class="svg" id="u3471" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
+     <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U1210-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix grpelem" id="u1210-4" data-muse-uid="U1210" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© Gods Kid Inc 2020</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1211-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame grpelem" id="u1211" href="http://www.tacklebox.company" data-muse-uid="U1211"><!-- svg --><img class="svg" id="u1212" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
-    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="1775" data-content-above-spacer="1775" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="2323" data-content-above-spacer="2322" data-content-below-spacer="0"></div>
+   <div class="size_fixed grpelem" id="u2251"><!-- custom html -->
+    
+            
+   </div>
   </div>
+  <!-- JS includes -->
+  <script type="text/javascript">
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+</script>
+  <script type="text/javascript">
+   window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
+</script>
   <!-- Other scripts -->
   <script type="text/javascript">
    // Decide whether to suppress missing file error or not based on preference setting
@@ -339,7 +533,23 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1199').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u2581').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,509],"opacity":0},{"opacity":0,"in":[509,509]},{"fade":50,"in":[509,Infinity],"opacity":100}]);/* scroll effect */
+$('#u2158').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
+$('#u2158').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,100],"opacity":100},{"opacity":100,"in":[100,100]},{"fade":100,"in":[100,Infinity],"opacity":0}]);/* scroll effect */
+$('#u2159').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[4.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2160').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2160').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"opacity":100,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
+$('#u2162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-7,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2164').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2165').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-2.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2168').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[5.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2169').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[2,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2170').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,5],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2171').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2172').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2173').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2174').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-6,0],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
@@ -347,5 +557,15 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 </script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=7928878" type="text/javascript" async data-main="scripts/museconfig.js?crc=310584261" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  
+  <!--HTML Widget code-->
+  
+<script type="text/javascript">
+
+	$(".Banner").addClass('u2251float');
+
+
+</script>
+
    </body>
 </html>
