--- a/gk/phone/about-us.html
+++ b/gk/phone/about-us.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=256485853" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=4053313882" id="pagesheet"/>
     <!--/*
 
 */
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext museBGSize grpelem" id="u1479" href="index.html" data-href="page:U400" data-muse-uid="U1479"><!-- content --></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1475-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1475-4" href="index.html" data-href="page:U400" data-muse-uid="U1475" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1475-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U1475" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1476-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u1476-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U1476" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
@@ -48,25 +48,42 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1477-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U1477" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1478-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1478-4" href="games.html" data-href="page:U1660" data-muse-uid="U1478" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1478-4" href="games.html" data-href="page:U2909" data-muse-uid="U1478" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
     <!-- m_editable region-id="editable-static-tag-U1317-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u1317-7" data-muse-uid="U1317" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix colelem" id="u1317-13" data-muse-uid="U1317" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p id="u1317-2">About Us</p>
      <p id="u1317-3">&nbsp;</p>
-     <p id="u1317-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+     <p id="u1317-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
+     <p id="u1317-7">ea commodo consequat. Duis aute irure dolor</p>
+     <p id="u1317-9">in reprehenderit in voluptate velit esse cillum</p>
+     <p id="u1317-11">dolore eu fugiat nulla pariatur.</p>
     </div>
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1431"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U1260-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u1260-4" data-muse-uid="U1260" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix colelem" id="u3522"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3523-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3523-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3523" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3526-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3526-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3526" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3525-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3525-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3525" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3524-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3524-4" href="games.html" data-href="page:U2909" data-muse-uid="U3524" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3520-BP_infinity" template="phone/about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3520-4" data-muse-uid="U3520" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <div class="museBGSize colelem" id="u1252"><!-- content --></div>
+    <div class="museBGSize colelem" id="u3521"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="932" data-content-above-spacer="931" data-content-below-spacer="50"></div>
+   <div class="verticalspacer" data-offset-top="797" data-content-above-spacer="796" data-content-below-spacer="29"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,8 +102,8 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1480').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u1480').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u1480').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u1480').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":25,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
