--- a/gk/phone/gallery.html
+++ b/gk/phone/gallery.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=46749072" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=4275155177" id="pagesheet"/>
     <!--/*
 
 */
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext museBGSize grpelem" id="u1533" href="index.html" data-href="page:U400" data-muse-uid="U1533"><!-- content --></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1529-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1529-4" href="index.html" data-href="page:U400" data-muse-uid="U1529" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1529-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U1529" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1530-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1530-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U1530" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
@@ -48,7 +48,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u1531-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U1531" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1532-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1532-4" href="games.html" data-href="page:U1660" data-muse-uid="U1532" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u1532-4" href="games.html" data-href="page:U2909" data-muse-uid="U1532" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
     <div class="colelem" id="u1114"><!-- content --></div>
@@ -58,14 +58,28 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="colelem" id="u1119"><!-- content --></div>
     <div class="colelem" id="u1120"><!-- content --></div>
     <div class="colelem" id="u1115"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U1109-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u1109-4" data-muse-uid="U1109" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix colelem" id="u3546"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U3547-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3547-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3547" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3550-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u3550-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3550" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3549-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3549-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3549" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U3548-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u3548-4" href="games.html" data-href="page:U2909" data-muse-uid="U3548" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U3544-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u3544-4" data-muse-uid="U3544" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p>© Gods Kid Inc 2020</p>
     </div>
     <!-- /m_editable -->
-    <div class="museBGSize colelem" id="u1102"><!-- content --></div>
+    <div class="museBGSize colelem" id="u3545"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="2889" data-content-above-spacer="2889" data-content-below-spacer="49"></div>
+   <div class="verticalspacer" data-offset-top="2943" data-content-above-spacer="2943" data-content-below-spacer="29"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -84,8 +98,8 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1534').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u1534').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u1534').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u1534').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":25,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
