--- a/gk/phone/index.html
+++ b/gk/phone/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=277817460" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=27358086" id="pagesheet"/>
     <!--/*
 
 */
@@ -27,32 +27,45 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="ose_pre_init mse_pre_init" id="u1507"><!-- content --></div>
-   <div class="clearfix grpelem" id="ppu1501"><!-- column -->
-    <div class="clearfix colelem" id="pu1501"><!-- group -->
-     <div class="museBGSize grpelem" id="u1501"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u1499"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u1500"><!-- content --></div>
-    </div>
-    <div class="clearfix colelem" id="pu1506"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U1506-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1506" href="index.html" data-href="page:U400" data-muse-uid="U1506"><!-- content --></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1502-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1502-4" href="index.html" data-href="page:U400" data-muse-uid="U1502" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1503-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1503-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U1503" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1504-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1504-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U1504" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1505-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix grpelem" id="u1505-4" href="games.html" data-href="page:U1660" data-muse-uid="U1505" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-     <!-- /m_editable -->
-    </div>
-    <div class="colelem" id="u401"><!-- custom html -->
-     <div id='collection-component-1594095473767'></div>
+   <div class="clearfix grpelem" id="pu2820"><!-- group -->
+    <div class="museBGSize mse_pre_init" id="u2820"><!-- content --></div>
+    <div class="museBGSize mse_pre_init" id="u2793"><!-- content --></div>
+    <div class="museBGSize mse_pre_init" id="u2794"><!-- content --></div>
+    <div class="museBGSize mse_pre_init" id="u2795"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U2797-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix mse_pre_init" id="u2797-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U2797" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U2834-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext anim_swing clearfix mse_pre_init" id="u2834-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U2834" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Store</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U2798-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix mse_pre_init" id="u2798-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U2798" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U2799-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix mse_pre_init" id="u2799-4" href="games.html" data-href="page:U2909" data-muse-uid="U2799" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+    <!-- /m_editable -->
+    <div class="ose_pre_init mse_pre_init" id="u2801"><!-- content --></div>
+    <div class="ose_pre_init mse_pre_init" id="u2584"><!-- simple frame --></div>
+    <div class="museBGSize CLOUD5 mse_pre_init" id="u3170"><!-- content --></div>
+    <div class="museBGSize ose_pre_init mse_pre_init" id="u2586"><!-- content --></div>
+    <div class="CLOUD2 museBGSize mse_pre_init" id="u2590"><!-- content --></div>
+    <div class="CLOUD1 museBGSize mse_pre_init" id="u2592"><!-- content --></div>
+    <div class="museBGSize CLOUD10 mse_pre_init" id="u3169"><!-- content --></div>
+    <div class="museBGSize CLOUD7 mse_pre_init" id="u3218"><!-- content --></div>
+    <div class="museBGSize CLOUD8 mse_pre_init" id="u3172"><!-- content --></div>
+    <div class="museBGSize CLOUD3 mse_pre_init" id="u3174"><!-- content --></div>
+    <div class="CLOUD3 museBGSize mse_pre_init" id="u3205"><!-- content --></div>
+    <div class="CLOUD3 museBGSize mse_pre_init" id="u3287"><!-- content --></div>
+    <div class="museBGSize CLOUD4 mse_pre_init" id="u3175"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U2593-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext anim_swing museBGSize Banner mse_pre_init" id="u2593" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U2593"><!-- content --></a>
+    <!-- /m_editable -->
+   </div>
+   <div class="clearfix grpelem" id="pgk"><!-- column -->
+    <a class="anchor_item colelem" id="gk"></a>
+    <div class="clearfix colelem" id="pu401"><!-- group -->
+     <div class="grpelem" id="u401"><!-- custom html -->
+      <div id='collection-component-1594095473767'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -307,15 +320,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 })();
 /*]]>*/
 </script>
+     </div>
+     <!-- m_editable region-id="editable-static-tag-U3568-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u3568-4" data-muse-uid="U3568" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>© Gods Kid Inc 2020</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="museBGSize grpelem" id="u3569"><!-- content --></div>
+     <div class="clearfix grpelem" id="u3570"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U3571-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3571-4" href="index.html#gk" data-href="anchor:U389:U2661" data-muse-uid="U3571" data-muse-type="txt_frame"><!-- content --><p>Store</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3574-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3574-4" href="gallery.html" data-href="page:U1113" data-muse-uid="U3574" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3573-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3573-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U3573" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U3572-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u3572-4" href="games.html" data-href="page:U2909" data-muse-uid="U3572" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+      <!-- /m_editable -->
+     </div>
     </div>
-    <!-- m_editable region-id="editable-static-tag-U411-BP_infinity" template="phone/index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u411-4" data-muse-uid="U411" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© Gods Kid Inc 2020</p>
-    </div>
-    <!-- /m_editable -->
-    <div class="museBGSize colelem" id="u535"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="3327" data-content-above-spacer="3327" data-content-below-spacer="49"></div>
+   <div class="verticalspacer" data-offset-top="4007" data-content-above-spacer="4007" data-content-below-spacer="29"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -334,8 +362,31 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1507').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
-$('#u1507').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u2820').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2793').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2794').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2795').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2797-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2834-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2798-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2799-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2801').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,649.05]},{"speed":[0,0],"in":[649.05,Infinity]}]);/* scroll effect */
+$('#u2801').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,649.05],"opacity":0},{"opacity":0,"in":[649.05,649.05]},{"fade":25,"in":[649.05,Infinity],"opacity":100}]);/* scroll effect */
+$('#u2584').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
+$('#u2584').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,100],"opacity":100},{"opacity":100,"in":[100,100]},{"fade":100,"in":[100,Infinity],"opacity":0}]);/* scroll effect */
+$('#u3170').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2586').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2586').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":100},{"opacity":100,"in":[0,0]},{"fade":20,"in":[0,Infinity],"opacity":0}]);/* scroll effect */
+$('#u2590').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-2.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2592').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[2,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3169').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3218').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3172').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[5.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3174').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3205').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3287').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3175').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3.5,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2593').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,5],"in":[0,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
